--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,87 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
 @import url('./animations.css');
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  color: #2e2f42;
+}
+
+.search-form {
+  margin-top: 36px;
+  margin-bottom: 32px;
+  width: 371px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  font-size: 16px;
+  color: #808080;
+  padding-left: 16px;
+}
+
+button {
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background: #4e75ff;
+  color: #fff;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+  justify-items: center;
+  padding: 0;
+  list-style: none;
+}
+
+.gallery-item {
+  width: 360px;
+  border: 1px solid #808080;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+}
+
+.image-link {
+  display: block;
+  width: 100%;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  width: 360px;
+  width: calc(100% - 40px);
+  padding: 5px 20px;
+  font-size: 12px;
+  background-color: #fff;
+  color: #2e2f42;
+}
+
+.info p {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
