--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,12 +21,26 @@ body {
 }
 
 input {
-  width: 272px;
-  height: 40px;
-  border-radius: 4px;
+  box-sizing: border-box;
+  font-weight: 400;
   font-size: 16px;
-  color: #808080;
-  padding-left: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 8px 16px;
+  border: 1px solid #808080;
+  outline: none;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  transition: border-color 300ms ease;
+}
+
+input:hover {
+  border-color: #000;
+}
+input:focus-within {
+  border-color: #4e75ff;
 }
 
 button {
@@ -49,12 +63,15 @@ button {
 }
 
 .gallery-item {
+  position: relative;
   width: 360px;
+  height: 200px;
   border: 1px solid #808080;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #fff;
+  overflow: hidden;
 }
 
 .image-link {
@@ -63,15 +80,18 @@ button {
 }
 
 .gallery-item img {
-  width: 100%;
+  width: 360px;
   height: 200px;
   object-fit: cover;
+  display: block;
 }
 
 .info {
+  position: absolute;
+  bottom: 0;
   display: flex;
+  background-color: rgba(0, 0, 0, 0.5);
   justify-content: space-between;
-  width: 360px;
   width: calc(100% - 40px);
   padding: 5px 20px;
   font-size: 12px;
